<resources>
    <string name="app_name">Титов Артем</string>
    <string name="mobile_number_hint">Мобильный</string>
    <string name="email_hint">E-mail</string>
    <string name="vk_profile_hint">Профиль в VK</string>
    <string name="repository_hint">Репозиторий</string>
    <string name="about_hint">О себе</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
        fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
        officia deserunt mollit anim id est laborum.
    </string>
    <string name="title_info_rating">Рейтинг</string>
    <string name="title_info_src_lines">Написано строк кода</string>
    <string name="title_info_projects_count">Проектов</string>
    <string name="my_profile_drawer_menu">Мой профиль</string>
    <string name="team_drawer_menu">Команда</string>
    <string name="user_profile.placeholder.image">Изменить фотографию профиля</string>
    <string name="user_profile_dialog_gallery">Загрузить из галерии</string>
    <string name="user_profile_dialog_camera">Сделать снимок</string>
    <string name="user_profile_dialog_cancel">Отмена</string>
    <string name="user_profile_dialog_title">Изменить фотографию профиля</string>
    <string name="user_profile_image_choose_msg">выберите изображение</string>
    <string name="user_profile_app_permessions_request">Для корректной работы приложения необходимо предоставить требуемые разрешения</string>
    <string name="activity_auth_login">ВОЙТИ</string>
    <string name="activity_auth_password_hint">Пароль</string>
    <string name="activity_auth_email_hint">Email</string>
    <string name="activity_auth_remain_password">Забыли пароль?</string>
    <string name="devintensive_forgot_pass_url">http://devintensive.softdesign-apps.ru/forgotpass</string>

</resources>
