<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activities.MainActivity">

    <!-- Phone number -->
    <LinearLayout
        style="@style/main_activity_info_line">
        <ImageView
            style="@style/icon.left"
            android:src="@drawable/ic_call_black_24dp"/>
        <LinearLayout
            style="@style/linear_layout_between_icons">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/phone_et"
                    style="@style/edit_text_info"
                    android:inputType="phone"
                    android:text="+7 (968) 827-73-56"
                    android:hint="@string/mobile_number_hint"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <ImageView
            style="@style/icon.right"
            android:src="@drawable/ic_phone_in_talk_black_24dp"/>
    </LinearLayout>
    <View style="@style/horizontal_separate_line"/>

    <!-- Email -->
    <LinearLayout
        style="@style/main_activity_info_line">
        <ImageView
            style="@style/icon.left"
            android:src="@drawable/ic_email_black_24dp"/>
        <LinearLayout
            style="@style/linear_layout_between_icons">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/mail_et"
                    style="@style/edit_text_info"
                    android:inputType="textMultiLine"
                    android:text="rbi62007@yandex.ru"
                    android:hint="@string/email_hint"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <ImageView
            style="@style/icon.right"
            android:src="@drawable/ic_send_black_24dp"/>
    </LinearLayout>
    <View style="@style/horizontal_separate_line"/>

    <!-- vk.com profile -->
    <LinearLayout
        style="@style/main_activity_info_line">
        <ImageView
            style="@style/icon.left"
            android:src="@drawable/ic_vk_circle_24dp"/>
        <LinearLayout
            style="@style/linear_layout_between_icons">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/vk_et"
                    style="@style/edit_text_info"
                    android:inputType="textMultiLine"
                    android:text="vk.com/id9370767"
                    android:hint="@string/vk_profile_hint"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <ImageView
            style="@style/icon.right"
            android:src="@drawable/ic_visibility_black_24dp"/>
    </LinearLayout>
    <View style="@style/horizontal_separate_line"/>

    <!-- github.com profile -->
    <LinearLayout
        style="@style/main_activity_info_line">
        <ImageView
            style="@style/icon.left"
            android:src="@drawable/ic_github_circle_24dp"/>
        <LinearLayout
            style="@style/linear_layout_between_icons">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/github_et"
                    style="@style/edit_text_info"
                    android:inputType="textMultiLine"
                    android:text="github.com/TitovArtem/DevIntensive"
                    android:hint="@string/repository_hint"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <ImageView
            style="@style/icon.right"
            android:src="@drawable/ic_visibility_black_24dp"/>
    </LinearLayout>
    <View style="@style/horizontal_separate_line"/>

    <!-- About -->
    <LinearLayout
        style="@style/main_activity_info_line">
        <ImageView
            style="@style/icon.left"
            android:src="@drawable/ic_account_circle_black_24dp"/>
        <LinearLayout
            style="@style/linear_layout_between_icons">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/about_et"
                    style="@style/edit_text_info"
                    android:inputType="textMultiLine"
                    android:text="@string/lorem_ipsum"
                    android:hint="@string/about_hint"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>