<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/auth_coordinator_layout"
    style="@style/match_parent_width_height"
    android:fitsSystemWindows="true"
    tools:ignore="contentDescription">

    <FrameLayout
        style="@style/match_parent_width_height"
        android:fitsSystemWindows="true"
        android:background="@color/grey_background">

        <ImageView
            style="@style/match_parent_width_height"
            android:scaleType="centerCrop"
            android:src="@drawable/login_bg" />

        <android.support.v7.widget.CardView
            android:id="@+id/auth_box"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="2dp"
            app:cardElevation="8dp">

            <LinearLayout
                style="@style/match_parent_width_height"
                android:orientation="vertical">

                <LinearLayout
                    style="@style/match_parent_width_wrap_content_height"
                    android:layout_marginBottom="@dimen/spacing_normal_16"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/spacing_medium_32">

                    <View
                        android:id="@+id/auth_login_indicator"
                        android:layout_width="4dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="20dp"
                        android:background="@color/color_accent" />

                    <TextView
                        android:id="@+id/auth_login_txt"
                        style="@style/match_parent_width_wrap_content_height"
                        android:fontFamily="sans-serif-medium"
                        android:paddingBottom="@dimen/spacing_small_8"
                        android:paddingTop="@dimen/spacing_small_8"
                        android:text="@string/activity_auth_login"
                        android:textColor="@color/color_accent"
                        android:textSize="@dimen/font_medium_20" />
                </LinearLayout>

                <LinearLayout
                    style="@style/match_parent_width_wrap_content_height"
                    android:layout_gravity="bottom"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/spacing_medial_24"
                    android:paddingLeft="@dimen/spacing_medial_24"
                    android:paddingRight="@dimen/spacing_medial_24">


                    <!-- Email field -->
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/auth_wrap_login_email"
                        style="@style/match_parent_width_wrap_content_height">

                        <EditText
                            android:id="@+id/auth_login_email_et"
                            style="@style/auth_activity_edit_text"
                            android:hint="@string/activity_auth_email_hint"
                            android:inputType="textEmailAddress" />
                    </android.support.design.widget.TextInputLayout>

                    <!-- Password field -->
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/auth_wrap_login_password"
                        style="@style/match_parent_width_wrap_content_height">

                        <EditText
                            android:id="@+id/auth_login_password_et"
                            style="@style/auth_activity_edit_text"
                            android:hint="@string/activity_auth_password_hint"
                            android:inputType="textPassword" />
                    </android.support.design.widget.TextInputLayout>

                    <!-- Login button -->
                    <Button
                        android:id="@+id/auth_login_btn"
                        style="@style/auth_activity_login_btn"
                        android:theme="@style/AppTheme.Button.Red" />

                    <!-- Remind password text -->
                    <TextView
                        android:id="@+id/auth_remember_txt"
                        style="@style/wrap_content_width_height"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/spacing_normal_16"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/activity_auth_remain_password"
                        android:textColor="@color/grey" />

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </FrameLayout>

</android.support.design.widget.CoordinatorLayout>
